--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -475,9 +475,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "PythonData",
    "language": "python",
-   "name": "python3"
+   "name": "pythondata"
   },
   "language_info": {
    "codemirror_mode": {
