--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -144,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Perform a query to retrieve the data and precipitation scores\n",
+    "# Perform a query to retrieve the date and precipitation scores\n",
     "results=[]\n",
     "# results = session.query(Measurement.date, Measurement.prcp)\n",
     "# print(results.all())\n",
