--- a/SurfsUp_Challenge.ipynb
+++ b/SurfsUp_Challenge.ipynb
@@ -3487,7 +3487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -3548,7 +3548,7 @@
        "4                0.00"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3558,13 +3558,13 @@
     "#list of precipitation for the month of June. \n",
     "results = []\n",
     "results = session.query(Measurement.prcp).filter(extract('month', Measurement.date) == 6).all()\n",
-    "june_p_df = pd.DataFrame(results, columns=['June Percipitation'])\n",
-    "june_p_df.head()"
+    "june_prcp_df = pd.DataFrame(results, columns=['June Percipitation'])\n",
+    "june_prcp_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -3640,14 +3640,14 @@
        "max              4.430000"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Calculate and print out the summary statistics for the June precipitation DataFrame.\n",
-    "june_p_df.describe()"
+    "june_prcp_df.describe()"
    ]
   },
   {
@@ -3669,7 +3669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -3693,7 +3693,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>June Percipitation</th>\n",
+       "      <th>December Percipitation</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -3722,15 +3722,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   June Percipitation\n",
-       "0                0.04\n",
-       "1                0.00\n",
-       "2                0.00\n",
-       "3                0.00\n",
-       "4                0.00"
+       "   December Percipitation\n",
+       "0                    0.04\n",
+       "1                    0.00\n",
+       "2                    0.00\n",
+       "3                    0.00\n",
+       "4                    0.00"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3740,13 +3740,13 @@
     "#list of precipitation for the month of December. \n",
     "results = []\n",
     "results = session.query(Measurement.prcp).filter(extract('month', Measurement.date) == 12).all()\n",
-    "december_p_df = pd.DataFrame(results, columns=['June Percipitation'])\n",
-    "december_p_df.head()"
+    "december_prcp_df = pd.DataFrame(results, columns=['December Percipitation'])\n",
+    "december_prcp_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -3770,7 +3770,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>June Percipitation</th>\n",
+       "      <th>December Percipitation</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -3811,25 +3811,25 @@
        "</div>"
       ],
       "text/plain": [
-       "       June Percipitation\n",
-       "count         1405.000000\n",
-       "mean             0.216819\n",
-       "std              0.541399\n",
-       "min              0.000000\n",
-       "25%              0.000000\n",
-       "50%              0.030000\n",
-       "75%              0.150000\n",
-       "max              6.420000"
+       "       December Percipitation\n",
+       "count             1405.000000\n",
+       "mean                 0.216819\n",
+       "std                  0.541399\n",
+       "min                  0.000000\n",
+       "25%                  0.000000\n",
+       "50%                  0.030000\n",
+       "75%                  0.150000\n",
+       "max                  6.420000"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Calculate and print out the summary statistics for the Decemeber precipitation DataFrame.\n",
-    "december_p_df.describe()"
+    "december_prcp_df.describe()"
    ]
   },
   {
